| Bug #29411 | deleting from a csv table leads to the table corruption | ||
|---|---|---|---|
| Submitted: | 28 Jun 2007 8:39 | Modified: | 11 Jul 2007 0:39 |
| Reporter: | Ramil Kalimullin | ||
| Status: | Closed | ||
| Category: | Server: CSV | Severity: | S1 (Critical) |
| Version: | 5.1 source | OS: | Any |
| Assigned to: | Ramil Kalimullin | Target Version: | |
[28 Jun 2007 8:39]
Ramil Kalimullin
[5 Jul 2007 8:55]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/30348 ChangeSet@1.2536, 2007-07-05 11:55:06+05:00, ramil@mysql.com +3 -0 Fix for bug #29411: deleting from a csv table leads to the table corruption Problem: we don't adjust share->rows_recorded and local_saved_data_file_length deleting rows from a CSV table, so following table check may fail. Fix: properly adjust those values.
[5 Jul 2007 9:46]
Sergey Vojtovich
ok to push.
[5 Jul 2007 10:05]
Alexander Barkov
ok to push
[10 Jul 2007 15:27]
Bugs System
Pushed into 5.1.21-beta
[11 Jul 2007 0:39]
Paul DuBois
Noted in 5.1.21 changelog. Deleting from a CSV table could corrupt it.
