Fix for bug #29411: deleting from a csv table leads to the table corruption

Problem: we don't adjust share->rows_recorded and local_saved_data_file_length
deleting rows from a CSV table, so following table check may fail.

Fix: properly adjust those values.